# utils

./: .gitignore  CMakeLists.txt  Linkfile  README.org  knoledge  link-pwd.1.restore  link-pwd.sh  new-repo.sh  notes  todo.sh  tr.sh
cmake/modules/: orgmanpages.cmake
etc/bash-completion/: vc.bash
etc/bash-completion/completions/: _p.use-profile
etc/bash_completion.d/: _cd.bash  vc.bash
etc/profile.d/: git-colon-path-support.bash  git-colon-path-support.zsh  my-builtins.sh  p.type.bash  vc.bash  vc.zsh
fswatch_unix/: fswatch.c  makefile  script.sh
libexec/philutils/: clip.py  cmc_header.c  echo-server.py  env_diff.sh  env_preproc.sh  etc-profile.sh  iwatch.sh  key-reader.sh  lineWrapper.c  make-color-codes.sh  mirrorize.py  p.use-profile.sh  path-find.py  pmake  set_file_watch.sh  stowbin.sh  stowpack.sh  type.py  urlencode.py
line_wrapper/: line_wrapper.c  line_wrapper.out  makefile
logger/: simple_logger
man/: man_utils.man  man_utils.org
man/man1/: golang.1  link-pwd.1.org  man_link-pwd.man  man_link-pwd.org
misc/: .gitignore  cdphil  clip-go.py  create-repo.py  env_analyser.py  env_analyser.sh  env_diff.sh  find-note  mirrorize.py  notes  set_file_watch.sh  tr.sh  wopen.sh
share/bash-completion/completions/: _p.use-profile
share/man/man1/: ci-decorate.org  git-mirrorize.org  hl.org
src/: Makefile  shell-split.c
test/: chunked_sender.py  chunks_requests.py  nc-test.sh
